[tool.poetry]
name = "pulumi-demos"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pulumi = "^2.24.1"

[tool.poetry.dev-dependencies]
flake8 = "*"
flake8-quotes = "*"
flake8-coding = "*"
flake8-commas = "*"
flake8-import-order = "*"
nose = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
